<resources>
    <string name="app_name">mountAIns</string>
    <string name="fit_image_to_scan">Fit image to scan</string>
    <string name="action_settings">Settings</string>
    <string name="action_friends">Friends</string>
    <string name="action_savedtracks">Saved Tracks</string>
    <string name="action_profile">My Profile</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_friends">Friends</string>
    <string name="title_activity_display_saved_tracks">Saved Tracks</string>
    <string name="title_activity_display_settings">Settings</string>
    <string name="friend1">Lisa Müller</string>
    <string name="friend2">John Doe</string>
    <string name="friend3">Max Mustermann</string>
    <string name="friend4">John Smith</string>
</resources>
