<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.armap.MainActivity" >
    <item android:id="@+id/action_profile"
        android:title="@string/action_profile"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_friends"
        android:orderInCategory="100"
        android:title="@string/action_friends"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_savedmaps"
        android:orderInCategory="100"
        android:title="@string/action_savedtracks"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
